Overflow Fix
Fixed the text overflow of the coin names on the home page.

--- a/src/App.css
+++ b/src/App.css
@@ -232,6 +232,9 @@ a {
 }
 
 .coin-header .coin-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   font-size: 19px;
   font-weight: 600;
 }
